# irretroforum

./: Cargo.toml
.github/workflows/: ci.yaml
database/: down.sql  up.sql
src/: app.rs  auth.rs  config.rs  database.rs  error.rs  main.rs  sessions.rs  view.rs
src/css/: style.css
src/html/: account-widget-anonymous.html  account-widget-user.html  base.begin.html  login-form.html  register-form.html  settings-totp-disabled.html  settings-totp-enabled.html  thread-post-form.html
template/: base.html  forum.html  homepage.html  login.html  register.html  settings-totp.html  settings.html  thread.html  user.html
