[package]
name = "irretroforum"
version = "0.0.0"
edition = "2021"

[dependencies]
argon2 = "0.4"
axum = { version = "0.6.0-rc.2", features = ["form", "headers", "http1"], default-features = false }
hex = "0.4"
html-escape = "0.2"
knuffel = { version = "2.0", features = ["derive"], default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
totp-rs = { version = "3.1", features = ["qr", "gen_secret"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
